--- a/app/src/main/res/layout/tab1_fragment.xml
+++ b/app/src/main/res/layout/tab1_fragment.xml
@@ -12,6 +12,15 @@
         android:layout_margin="30dp"
         android:text="GET" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"
+        android:layout_marginStart="20dp"
+        android:text="Result of the GET request"
+        android:textSize="18sp"/>
+
     <ListView
         android:id="@+id/list_view"
         android:layout_margin="20dp"
