--- a/app/src/main/res/layout/tab4_fragment.xml
+++ b/app/src/main/res/layout/tab4_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,6 +9,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnTEST4"
-        android:text="UPDATE"/>
+        android:text="@string/load_items"/>
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"
+        android:layout_marginStart="20dp"
+        android:text="@string/result_of_the_get_request"
+        android:textSize="18sp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:textStyle="bold"
+        android:layout_marginStart="35dp"
+        android:text="@string/choose_the_item_to_delete"
+        android:textSize="12sp"/>
+
+    <ListView
+        android:id="@+id/list_view2"
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</LinearLayout>
