--- a/app/src/main/res/layout/put_fragment.xml
+++ b/app/src/main/res/layout/put_fragment.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <Button
-        android:layout_margin="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/btnTEST4"
-        android:text="@string/load_items"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        android:text="@string/load_items" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:textStyle="bold"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:text="@string/result_of_the_get_request"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:textStyle="bold"
         android:layout_marginStart="35dp"
+        android:layout_marginTop="15dp"
         android:text="@string/touch_the_item_to_modify"
-        android:textSize="12sp"/>
+        android:textSize="12sp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/list_view2"
-        android:layout_margin="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_margin="20dp" />
 
 </LinearLayout>
