--- a/app/src/main/res/layout/popup_put.xml
+++ b/app/src/main/res/layout/popup_put.xml
@@ -1,35 +1,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:textStyle="bold"
-        android:layout_marginStart="5dp"
         android:text="PUT REQUEST"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:textStyle="bold"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="15dp"
         android:text="Write a new name "
-        android:textSize="12sp"/>
+        android:textSize="12sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/username"
-        android:inputType="textPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginLeft="4dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="username" />
+        android:hint="username"
+        android:inputType="textPersonName" />
 
 </LinearLayout>
